<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
     android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:textSize="15dip"
        android:textColor="@color/theme_color"
        android:layout_width="match_parent"
        android:text="@string/jointitle"
        android:id="@+id/textView4"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_alignParentTop="true"
        android:hint="@string/name"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edName"
            android:imeOptions="actionNext"
            android:textSize="16dip"
            android:inputType="text"

            android:singleLine="true"
            android:padding="6dip" />

    </android.support.design.widget.TextInputLayout>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addhike"
        android:textColor="@color/theme_color"
        android:padding="6dip"
        android:id="@+id/swAgree"
        android:checked="true" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dip"
        android:layout_alignParentTop="true"
        android:hint="@string/phoneNumber"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edPhoneNumber"
            android:imeOptions="actionNext"
            android:textSize="16dip"
            android:inputType="phone"
            android:ems="12"
            android:singleLine="true"
            android:padding="6dip" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/email"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edMail"
            android:imeOptions="actionGo"
            android:textSize="16dip"
            android:inputType="text"
            android:singleLine="true"
            android:padding="6dip" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilOrgName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edOrgName"
            android:imeOptions="actionGo"
            android:textSize="16dip"
            android:inputType="text"
            android:singleLine="true"
            android:padding="6dip" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnSubmit"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dip"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:padding="4dip"
        style="@style/ThemeButton"
        android:textColor="@color/almost_white" />
</LinearLayout>

</ScrollView>